[gd_scene load_steps=3 format=3 uid="uid://b2ll8tut18nx6"]

[ext_resource type="Script" path="res://scripts/pages/preset/preset_page_save_preset.gd" id="1_tsndv"]
[ext_resource type="Theme" path="res://visual/themes/main_theme.tres" id="2_r6mp1"]

[node name="PresetPageSavePreset" type="Control" node_paths=PackedStringArray("preset_edit", "tag_edit", "session_count_edit", "session_length_edit", "break_length_edit", "auto_break_toggle", "auto_session_toggle")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tsndv")
preset_edit = NodePath("MarginContainer/VBoxContainer/preset")
tag_edit = NodePath("MarginContainer/VBoxContainer/tag")
session_count_edit = NodePath("MarginContainer/VBoxContainer2/session count/edit")
session_length_edit = NodePath("MarginContainer/VBoxContainer2/session length/edit")
break_length_edit = NodePath("MarginContainer/VBoxContainer2/break length/edit")
auto_break_toggle = NodePath("MarginContainer/VBoxContainer3/auto start break")
auto_session_toggle = NodePath("MarginContainer/VBoxContainer3/auto start session")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="PRESETS" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_r6mp1")
theme_override_font_sizes/font_size = 24
text = "<"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = -5

[node name="preset" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_r6mp1")
theme_type_variation = &"SmallEdit"
placeholder_text = "[enter-preset-name]"
alignment = 1
expand_to_text_length = true

[node name="tag" type="LineEdit" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_r6mp1")
theme_type_variation = &"SmallEdit"
theme_override_font_sizes/font_size = 25
placeholder_text = "[select-tag]"
alignment = 1
expand_to_text_length = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="session count" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/session count"]
layout_mode = 2
theme = ExtResource("2_r6mp1")
text = "session count"
horizontal_alignment = 1
vertical_alignment = 1

[node name="edit" type="LineEdit" parent="MarginContainer/VBoxContainer2/session count"]
layout_mode = 2
theme = ExtResource("2_r6mp1")
theme_type_variation = &"LargeEdit"
theme_override_font_sizes/font_size = 72
placeholder_text = "0"
alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2/session count"]
layout_mode = 2
theme = ExtResource("2_r6mp1")
theme_override_font_sizes/font_size = 12
text = "*set to 0 for unlimited"
horizontal_alignment = 1

[node name="session length" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/session length"]
layout_mode = 2
theme = ExtResource("2_r6mp1")
text = "session length (min)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="edit" type="LineEdit" parent="MarginContainer/VBoxContainer2/session length"]
layout_mode = 2
theme = ExtResource("2_r6mp1")
theme_type_variation = &"LargeEdit"
theme_override_font_sizes/font_size = 72
placeholder_text = "0"
alignment = 1

[node name="break length" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/break length"]
layout_mode = 2
theme = ExtResource("2_r6mp1")
text = "break length (min)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="edit" type="LineEdit" parent="MarginContainer/VBoxContainer2/break length"]
layout_mode = 2
theme = ExtResource("2_r6mp1")
theme_type_variation = &"LargeEdit"
theme_override_font_sizes/font_size = 72
placeholder_text = "0"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 35

[node name="START" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_r6mp1")
theme_override_font_sizes/font_size = 24
text = "START"

[node name="SAVE" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_r6mp1")
theme_override_font_sizes/font_size = 24
text = "SAVE"

[node name="DELETE" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource("2_r6mp1")
theme_type_variation = &"DangerButton"
theme_override_font_sizes/font_size = 24
text = "DELETE"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="auto start break" type="CheckButton" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2
theme = ExtResource("2_r6mp1")
theme_type_variation = &"NormalCheckButton"
text = "Auto start break"

[node name="auto start session" type="CheckButton" parent="MarginContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_r6mp1")
theme_type_variation = &"NormalCheckButton"
text = "Auto start session"

[connection signal="pressed" from="MarginContainer/PRESETS" to="." method="_load_prests_page"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/START" to="." method="_start_preset"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/SAVE" to="." method="_save_preset_data"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/DELETE" to="." method="_delete_preset"]
